# cx-plugins

./: README.md  flake.nix  pyproject.toml
arena/: plugin.yaml
arena/plugin/: __init__.py  arena_auth.py
atproto/: plugin.yaml
atproto/plugin/: __init__.py  atproto_auth.py
discord/: plugin.yaml
soundcloud/: plugin.yaml
soundcloud/plugin/: __init__.py  soundcloud_auth.py
src/cx_plugins/: __init__.py
src/cx_plugins/providers/airtable/: airtable.py  plugin.py
src/cx_plugins/providers/arena/: arena.py  arena_auth.py  cache.py  plugin.py
src/cx_plugins/providers/arxiv/: __init__.py  arxiv.py  plugin.py
src/cx_plugins/providers/atproto/: atproto.py  atproto_auth.py  cache.py  oauth.py  plugin.py
src/cx_plugins/providers/discord/: cache.py  discord.py  plugin.py
src/cx_plugins/providers/googledocs/: __init__.py  googledocs.py  plugin.py
src/cx_plugins/providers/itchio/: __init__.py  cache.py  itchio.py  plugin.py
src/cx_plugins/providers/shared/: __init__.py  cache.py  media.py  progress.py
src/cx_plugins/providers/skill/: plugin.py  skill.py
src/cx_plugins/providers/snipd/: cache.py  plugin.py  snipd.py
src/cx_plugins/providers/soundcloud/: cache.py  oauth.py  plugin.py  soundcloud.py  soundcloud_auth.py
src/cx_plugins/providers/transcribe/: __init__.py  gate.py  mistral.py  openai.py  plugin.py  pyannote_script.py
src/cx_plugins/providers/twitter/: __init__.py  cache.py  plugin.py  twitter.py
src/cx_plugins/providers/whatsapp/: plugin.py  whatsapp.py
tests/: test_airtable.py  test_arena_plugin.py  test_arxiv.py  test_discord.py  test_googledocs.py  test_itchio.py  test_mistral_transcribe.py  test_openai_transcribe.py  test_snipd.py  test_transcription_plugin.py  test_twitter.py  test_whatsapp.py  test_wikipedia.py  test_xwitter.py  test_ytdlp.py
youtube/: plugin.yaml
(+12 files in other folders)
