[project]
name = "cx-plugins"
version = "0.1.0"
description = "External provider plugins for contextualize"
readme = "README.md"
authors = [
    { name = "jmpaz" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "click>=8.1.0",
    "cryptography>=46.0.0",
    "lexrpc>=2.1",
    "pylatexenc>=2.10",
    "pyjwt>=2.10.1",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "selectolax>=0.3.20",
    "yt-dlp>=2025.1.0",
]

[project.entry-points."contextualize.plugins"]
arena = "cx_plugins.providers.arena.plugin"
arxiv = "cx_plugins.providers.arxiv.plugin"
atproto = "cx_plugins.providers.atproto.plugin"
discord = "cx_plugins.providers.discord.plugin"
soundcloud = "cx_plugins.providers.soundcloud.plugin"
transcribe = "cx_plugins.providers.transcribe.plugin"
wikipedia = "cx_plugins.providers.wikipedia.plugin"
skill = "cx_plugins.providers.skill.plugin"
ytdlp = "cx_plugins.providers.ytdlp.plugin"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
